# word-lines

./: .gitignore  Makefile  README.md  app.cabal  cabal.project  flake.nix  fourmolu.yaml  package-lock.json  word-lines.cabal
.github/workflows/: CI.yml
Client/: Game.hs  Main.hs  Styles.hs  dictionary.js  styles.css
Server/: Main.hs
Shared/Game/: Action.hs  Letters.hs  Mode.hs  Model.hs  Player.hs  Tile.hs  View.hs
Test/: Main.hs
app/: Dictionary.hs  Game.hs  Letters.hs  Main.hs  Styles.hs
client/: Dictionary.hs  Game.hs  Letters.hs
public/: client.wasm  ghc_wasm_jsffi.js  index.html
server/: Main.hs
static/: index.js
