cabal-version:      3.14
name:               word-lines
version:            0.1.0.0
synopsis:           Word game
description:        Fast paced, multiplayer word game
license:            GPL-3.0-or-later
license-file:       LICENSE
author:             easafe
maintainer:         e@asafe.dev
category:           Game
build-type:         Simple

flag interactive
  default:
    False
  manual:
    True

common warnings
  ghc-options:
    -funbox-strict-fields -O2 -ferror-spans -fspecialise-aggressively -Wall

common server-options
  if impl(ghcjs) || arch(javascript)
    buildable: False

common client-options
  if impl(ghcjs) || arch(javascript) || arch(wasm32)
    buildable: True
  else
    buildable: False


common options
  if arch(wasm32)
    ghc-options:
      -no-hs-main -optl-mexec-model=reactor "-optl-Wl,--export=hs_start"
    cpp-options:
      -DWASM
    if flag (interactive)
      cpp-options:
        -DINTERACTIVE

  if arch(javascript)
     ld-options:
       -sEXPORTED_RUNTIME_METHODS=HEAP8

executable server
  import:
    server-options, options, warnings
  main-is:
    Main.hs
  ghc-options:
    -threaded -Wall -rtsopts -pgmL
  build-depends:
    base, servant, servant-server, directory, warp, wai, http-media, lucid, servant-lucid, time, string-conversions, bytestring, attoparsec, aeson, mtl, base-compat
  hs-source-dirs:
    server
  default-language:
    GHC2024

executable client
  import:
   client-options, options, warnings
  main-is:
    Main.hs
  build-depends:
    base < 5, miso >= 1.9, mtl, random, unordered-containers, text
  other-modules:
    Letters, Styles, Dictionary, Game
  hs-source-dirs:
    client
  default-language:
    GHC2024
